syntax = "proto3";


option java_package = "com.mzouink.sum";
option java_multiple_files = true;

message SumRequest {
  int32 x = 1;
  int32 y = 2;
}

message SumResponse {
  int32 result = 1;
}

service SumService {
  rpc calculateSum(SumRequest) returns (SumResponse);
}